--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,20 +8,34 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [18.x] # Koristi stabilnu verziju
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install --force
-    - run: npm run build --if-present
-    - run: npm test
+
+    - name: Check Node.js and NPM version
+      run: |
+        node -v
+        npm -v
+
+    - name: Install correct Chart.js version
+      run: npm install chart.js@3.9.1
+
+    - name: Install dependencies
+      run: npm install --legacy-peer-deps
+
+    - name: Build project
+      run: npm run build --if-present
+
+    - name: Run tests
+      run: npm test
