--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.0"
+    "vee-validate": "^4.0.0",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
