--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Deploy to FTP
       uses: SamKirkland/FTP-Deploy-Action@v3.1.0
       with:
-        server: ${{ secrets.FTP_HOST }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./dist/  # Ovo je folder gde Vue pravi build fajlove
-        server-dir: /public_html/smartera.razmenidom.com/  # Postavi gde treba fajlovi da idu na hostingu
+          ftp-server: ${{ secrets.FTP_HOST }}
+          ftp-username: ${{ secrets.FTP_USERNAME }}
+          ftp-password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./dist/
+          server-dir: /public_html/smartera.razmenidom.com/
