--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
     "@phosphor-icons/vue": "^2.2.1",
     "@primevue/themes": "^4.2.5",
     "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
+    "register-service-worker": "^1.7.2",
     "tailwindcss-primeui": "^0.3.4",
+    "vee-validate": "^4.0.0",
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
