--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@phosphor-icons/vue": "^2.2.1",
     "@primevue/themes": "^4.2.5",
+    "@vueuse/motion": "^3.0.3",
     "axios": "^1.7.9",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
