--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,10 +38,10 @@ jobs:
       run: npm run build --if-present
       
     - name: Deploy to FTP
-      uses: SamKirkland/FTP-Deploy-Action@4.3.4
+      uses: SamKirkland/FTP-Deploy-Action@v3.1.0
       with:
-          server: ${{ secrets.FTP_HOST }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
+          ftp-server: ${{ secrets.FTP_HOST }}
+          ftp-username: ${{ secrets.FTP_USERNAME }}
+          ftp-password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./dist/
-          server-dir: /public_html/smartera.razmenidom.com/
+          git-ftp-args: --remote-root /public_html/smartera.razmenidom.com --auto-init
