--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,10 +24,10 @@ jobs:
         run: npm run build
 
       - name: Deploy to FTP server
-        uses: SamKirkland/FTP-Deploy-Action@v4
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: dist/  # Ovde ide output Vue aplikacije
-          server-dir: /public_html/smartera.razmenidom.com/  # Prilagodi putanju gde se hostuje tvoj sajt
+          server-dir: /public_html/smartera.razmenidom.com/
