--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-touch-events": "^5.0.13",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.0",
     "yup": "^1.0.0"
   },
@@ -31,11 +32,11 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
