--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: Install dependencies
-        run: npm install
-
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install
       - name: Build project
         run: npm run build
 
