--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "idb": "^8.0.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "register-service-worker": "^1.7.2",
