--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vee-validate": "^4.0.0",
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.8",
+    "vue-range-slider": "^0.6.0",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-touch-events": "^5.0.13",
