--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-range-slider": "^0.6.0",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue-virtual-scroller": "^1.1.2",
     "vue3-touch-events": "^5.0.13",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.0",
