--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "idb": "^8.0.2",
+    "laravel-echo": "^2.1.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
+    "pusher-js": "^8.4.0",
     "register-service-worker": "^1.7.2",
     "tailwindcss-primeui": "^0.3.4",
     "vee-validate": "^4.0.0",
