--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "pusher-js": "^8.4.0",
+    "qrcode.vue": "^3.6.0",
     "register-service-worker": "^1.7.2",
     "tailwindcss-primeui": "^0.3.4",
     "vee-validate": "^4.0.0",
@@ -26,6 +27,7 @@
     "vue-chart-3": "^3.1.8",
     "vue-range-slider": "^0.6.0",
     "vue-router": "^4.0.3",
+    "vue-sonner": "^2.0.9",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-touch-events": "^5.0.13",
     "vuedraggable": "^4.1.0",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@iconify/vue": "^5.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
@@ -46,6 +49,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.17"
   }
 }
